--- a/src/components/pages/home-page/HomePage.css
+++ b/src/components/pages/home-page/HomePage.css
@@ -1,9 +1,7 @@
 .home-page-container {
-position: relative;
-  right: 3rem;
-  background-color: rgba(226, 242, 248, 0.9);
-  box-sizing: border-box;
-  width: calc(100% - 3rem);
-  padding: 1rem;
-  height: calc(100vh - 7rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 95vh;
+  padding: 0.6rem 0;
 }
