--- a/src/components/pages/home-page/HomePage.css
+++ b/src/components/pages/home-page/HomePage.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 95vh;
-  padding: 0.6rem 0;
+  height: 35rem;
+  padding: 0.8rem 0;
 }
